deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testhttps
  labels:
    app: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - image: wbitt/network-multitool
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http-port
            - containerPort: 443
              name: https-port
          volumeMounts:
            - name: nginx-index-file
              mountPath: /usr/share/nginx/html/
          name: network-multitool
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
      - name: nginx-index-file
        configMap:
          name: index-html-configmap
