deployment-svc2.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice2
spec:
  selector:
    app: myapp
  type: NodePort
  ports:
    - name: web
      port: 80
      nodePort: 32001
      targetPort: 80
